--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+diffusers = "^0.26.3"
+transformers = "^4.38.2"
+torch = "^2.2.1"
+accelerate = "^0.27.2"
+pillow = "^10.2.0"
 
 
 [build-system]
